2000-11-29  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Shell Substitutions): More on the variations
	around ${foo=bar}.
	(Assignments): Rewrite as a summary of the previous section.
	* acgeneral.m4 (AC_CACHE_SAVE): Be protected against the Solaris'
	`${foo='${bar}'}' bug.

2000-11-29  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_OUTPUT_HEADERS, _AC_OUTPUT_FILES): Don't use
	   `... echo "error: \\\`$f'" ...`
	as it's not portable to BSDI 1.3.
	Do this instead:
	   `... echo "error: $f" ...`
	Reported by Daniele Arena.

2000-11-29  Akim Demaille  <akim@epita.fr>

	QNX 4.2.5's expr always exits 1 when `:' is used with parens.

	* doc/autoconf.texi (Limitations of Usual Tools) <expr>: More
	information, thanks to Paul Berrevoets, Paul Eggert and David
	Morgan.
	* sh.m4 (_AS_EXPR_PREPARE): New.
	(AS_DIRNAME): Use it.

2000-11-29  Akim Demaille  <akim@epita.fr>

	sizeof (struct {char a,b; }) is not required to be 2.
	Reported by Johan Danielsson.

	* tests/semantics.at (AC_CHECK_SIZEOF): Define charchar as an
	array of 2 chars.
	Suggested by Alexandre.

2000-11-29  Akim Demaille  <akim@epita.fr>

	Provide a means to display banners in the test suite.

	* tests/atgeneral.m4 (AT_INIT): Initialize AT_banner_ordinal.
	Execute the epilogue of the tests only if a test was run.
	Don't built the value of `at_tests_all' by a for loop: expand
	AT_TESTS_ALL.
	(AT_SETUP): Build AT_TESTS_ALL.
	(AT_BANNER): New.
	Adjust all the former banners to use it.
	(AT_CHECK): Don't trace the decoding of $?.

2000-11-29  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4 (AT_DEFINE, AT_UNDEFINE, AT_SHIFT)
	(AT_INCLUDE): Remove, use the m4_ macros.

2000-11-29  Akim Demaille  <akim@epita.fr>

	* m4sugar.m4 (ifval, ifset, ifdef, ifndef, m4_ifvanl): Rename as...
	(m4_ifval, m4_ifset, m4_ifdef, m4_ifndef, m4_ifvaln): this.
	(m4_n): New macro.
	(m4_ifvaln): Use it.
	* autoconf.m4 (ifdef): Restore it.

2000-11-29  Akim Demaille  <akim@epita.fr>
